samples/_failures_safe/1761392361_114949_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_cc5a5269.c: In function ‘main’:
./samples/SAFE/__tmp_cc5a5269.c:159:25: error: expected ‘;’ at end of input
  159 |                 return 1
      |                         ^
      |                         ;
./samples/SAFE/__tmp_cc5a5269.c:159:17: error: expected declaration or statement at end of input
  159 |                 return 1
      |                 ^~~~~~
./samples/SAFE/__tmp_cc5a5269.c:159:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_cc5a5269.c:159:17: error: expected declaration or statement at end of input
